# dcgm-public

./: README.md  pyproject.toml  requirements.txt
examples/: synthetic_corpus.txt
scripts/: run_synthetic.py  train_tiny_lm.py
src/dcgm/: __init__.py  attention.py  config.py  graph.py  integration.py  maintainer.py  message_passing.py  pooling.py  retriever.py  tiny_transformer.py  utils.py
tests/: test_attention.py  test_end_to_end.py  test_graph.py  test_sparsifier.py
