
[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "dcgm-scientific"
version = "0.1.0"
description = "Dynamic Causal-Graph Memory (DCGM): scientific-computing focused implementation"
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
addopts = "-q"
