
[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "dcgm-scientific"
version = "0.1.0"
description = "Dynamic Causal-Graph Memory (DCGM): scientific-computing focused implementation"
authors = [{name="Thomas Chen", email="chen.thomas@columbia.edu"}]
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
addopts = "-q"
